--- a/web/src/index.html
+++ b/web/src/index.html
@@ -22,10 +22,7 @@
 </head>
 
 <body>
-  <div id="redwood-app">
-    <!-- Please keep the line below for prerender support. -->
-    <%= prerenderPlaceholder %>
-  </div>
+  <div id="redwood-app"></div>
 </body>
 
 </html>
