Add default meta tags for pages not prerendered yet

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -11,13 +11,28 @@
     gtag('config', 'G-N0F0S06YWB');
   </script>
 
+  <!-- Rendering -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="/favicon.png" />
+  <title>Make guides for the products you swear by | Lifepacks</title>
 
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Add default meta tags for pages that aren't prerendered yet. These should always get overwritten.-->
+  <meta property="og:title" content="Make guides for the products you swear by">
+  <meta property="twitter:title" content="Make guides for the products you swear by">
+  <meta name="description" content="Publish product recommendations just like the professionals.">
+  <meta name="twitter:description" content="Publish product recommendations just like the professionals.">
+  <meta property="og:description" content="Publish product recommendations just like the professionals.">
+  <meta property="og:url" content="https://lifepacks.co/">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://lifepacks.co/static/media/website_screenshot.192bc396.png">
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:image" content="https://lifepacks.co/static/media/website_screenshot.192bc396.png">
 </head>
 
 <body>
