Try to spoof react helmet ownership over default tags:

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -23,16 +23,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <!-- Add default meta tags for pages that aren't prerendered yet. These should always get overwritten.-->
-  <meta property="og:title" content="Make guides for the products you swear by">
-  <meta property="twitter:title" content="Make guides for the products you swear by">
-  <meta name="description" content="Publish product recommendations just like the professionals.">
-  <meta name="twitter:description" content="Publish product recommendations just like the professionals.">
-  <meta property="og:description" content="Publish product recommendations just like the professionals.">
-  <meta property="og:url" content="https://lifepacks.co/">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="https://lifepacks.co/static/media/website_screenshot.192bc396.png">
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:image" content="https://lifepacks.co/static/media/website_screenshot.192bc396.png">
+  <meta data-rh="true" property="og:title" content="Make guides for the products you swear by">
+  <meta data-rh="true" property="twitter:title" content="Make guides for the products you swear by">
+  <meta data-rh="true" name="description" content="Publish product recommendations just like the professionals.">
+  <meta data-rh="true" name="twitter:description" content="Publish product recommendations just like the professionals.">
+  <meta data-rh="true" property="og:description" content="Publish product recommendations just like the professionals.">
+  <meta data-rh="true" property="og:url" content="https://lifepacks.co/">
+  <meta data-rh="true" property="og:type" content="website">
+  <meta data-rh="true" property="og:image" content="https://lifepacks.co/static/media/website_screenshot.192bc396.png">
+  <meta data-rh="true" property="twitter:card" content="summary_large_image">
+  <meta data-rh="true" property="twitter:image" content="https://lifepacks.co/static/media/website_screenshot.192bc396.png">
 </head>
 
 <body>
