--- a/web/src/index.html
+++ b/web/src/index.html
@@ -15,7 +15,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="/favicon.png" />
-  <title>Make guides for the products you swear by | Lifepacks</title>
+  <title>Recommend the products you swear by | Lifepacks</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
